--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,26 +115,51 @@ div.absolute {
 
 .card-1-container img {
   width: 1484px;
-  opacity: 50%;
+  opacity: 40%;
 }
 
 .card-1-container :hover {
   opacity: 100%;
+  transition: opacity 1s;
 }
 
 .centered {
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-decoration: solid;
+  font-size: 80px;
+  font-family: Arial;
+  color: #1d1c2e;
+  margin: 0%;
+  padding: 0%;
+}
+
+.card-container {
+  flex: 1 0 0;
+  padding: 10px;
+  text-align: row;
+  position: relative;
+}
+
+.card-container img {
+  width: 400px;
+  opacity: 40%;
+  transition: opacity 2s;
+}
+
+.centered-1 {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-decoration: solid;
   font-size: 40px;
-  font-family: Arial, Helvetica, sans-serif;
-  color: var(--eggshell);
-}
-
-.centered :hover {
-  color: #000;
+  font-family: Arial;
+  color: #1d1c2e;
+  margin: 0%;
+  padding: 0%;
 }
 
 /* ----------------------------- */
