--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,7 @@ body {
 h1 {
   margin: 0;
   font-size: 60px;
-  color: royalblue;
+  color: var(--amethyst);
   position: center;
 }
 
@@ -102,8 +102,7 @@ div.absolute {
   display: flex;
   margin: 2%;
   flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .card-1-container {
@@ -111,6 +110,8 @@ div.absolute {
   padding: 10px;
   text-align: center;
   position: relative;
+  border-style: solid;
+  border-width: 1.5px;
 }
 
 .card-1-container img {
@@ -136,17 +137,35 @@ div.absolute {
   padding: 0%;
 }
 
+.card-2-container {
+  flex-direction: row;
+  flex-wrap: wrap;
+  text-align: row;
+  position: relative;
+  justify-content: row;
+  margin: 0;
+  padding: 0;
+}
+
 .card-container {
-  flex: 1 0 0;
+  flex-direction: row;
   padding: 10px;
   text-align: row;
   position: relative;
+  width: fit-content;
+  border-style: solid;
+  border-width: 1.5px;
+  margin: 0;
 }
 
 .card-container img {
   width: 400px;
   opacity: 40%;
-  transition: opacity 2s;
+}
+
+.card-container :hover {
+  opacity: 100%;
+  transition: opacity 1s;
 }
 
 .centered-1 {
@@ -165,7 +184,7 @@ div.absolute {
 /* ----------------------------- */
 
 .nav-link-container-1 {
-  margin: 2%;
+  margin: 0;
   padding: 0%;
   flex-grow: 2;
   display: flex;
@@ -194,7 +213,7 @@ hr {
   border: 1px dashed #000;
   width: 50%;
   margin: auto;
-  margin-top: 0%;
+  margin-top: 0.5%;
   margin-bottom: 0.5%;
 }
 
@@ -232,5 +251,38 @@ hr {
   .nav-link-container-1 {
     flex-direction: column;
     align-items: center;
+  }
+
+  .card-1-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .card-1-container img {
+    flex-direction: column;
+    align-items: center;
+    width: 300px;
+  }
+
+  .centered {
+    flex-direction: column;
+    align-items: center;
+    font-size: 20px;
+  }
+
+  .card-2-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .card-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .card-container img {
+    flex-direction: column;
+    align-items: center;
+    width: 319px;
   }
 }
