--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,7 @@ h3 {
 
 div.relative {
   position: relative;
+  align-items: left;
   width: 200px;
   height: 400px;
   margin: 0;
@@ -85,14 +86,20 @@ div.relative {
 
 div.absolute {
   position: absolute;
+  align-items: center;
   left: 80px;
   height: 400px;
   width: 200px;
 }
 
+.absolute {
+  font-family: Arial;
+  font-style: bold;
+  color: var(--amethyst);
+}
+
 .center-image {
-  display: block;
-  margin-right: auto;
+  align-items: center;
 
   width: 185px;
 }
@@ -107,6 +114,8 @@ div.absolute {
 
 .card-1-container {
   flex: 1 0 0;
+  flex-direction: row;
+  align-items: right;
   padding: 10px;
   text-align: center;
   position: relative;
@@ -124,38 +133,15 @@ div.absolute {
   transition: opacity 1s;
 }
 
-.centered {
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-decoration: solid;
-  font-size: 80px;
-  font-family: Arial;
-  color: #1d1c2e;
-  margin: 0%;
-  padding: 0%;
-}
-
-.card-2-container {
-  flex-direction: row;
-  flex-wrap: wrap;
-  text-align: row;
-  position: relative;
-  justify-content: row;
-  margin: 0;
-  padding: 0;
-}
-
 .card-container {
+  display: flex;
   flex-direction: row;
+  justify-content: space-between;
   padding: 10px;
   text-align: row;
-  position: relative;
-  width: fit-content;
   border-style: solid;
   border-width: 1.5px;
-  margin: 0;
+  margin: 5;
 }
 
 .card-container img {
@@ -166,19 +152,6 @@ div.absolute {
 .card-container :hover {
   opacity: 100%;
   transition: opacity 1s;
-}
-
-.centered-1 {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-decoration: solid;
-  font-size: 40px;
-  font-family: Arial;
-  color: #1d1c2e;
-  margin: 0%;
-  padding: 0%;
 }
 
 /* ----------------------------- */
@@ -243,9 +216,11 @@ hr {
     align-items: center;
   }
 
-  .p {
+  .absolute {
     flex-direction: column;
     align-items: center;
+
+    font-size: 16px;
   }
 
   .nav-link-container-1 {
@@ -256,6 +231,7 @@ hr {
   .card-1-container {
     flex-direction: column;
     align-items: center;
+    border-style: none;
   }
 
   .card-1-container img {
@@ -278,11 +254,18 @@ hr {
   .card-container {
     flex-direction: column;
     align-items: center;
+    border-style: none;
   }
 
   .card-container img {
     flex-direction: column;
     align-items: center;
-    width: 319px;
+    width: 240px;
+  }
+
+  .centered-1 {
+    flex-direction: column;
+    align-items: center;
+    font-size: 20px;
   }
 }
